# TailorResume-Demo

./: .gitignore  README.md
ai-service/: .env.example  =4  README.md  pyproject.toml
ai-service/app/: config.py  main.py  scoring_normalize.py
ai-service/scripts/: ats_diagnostic_scenarios.py  ats_full_witness.py  check_ats_scenario_expectations.py  check_ats_scenario_fixtures.py  debug_ats_coverage.py  debug_llm_scoring_packet.py  run_ats_diagnostic_suite.py  run_ats_scenario_scoring.py  run_ats_scenario_tailoring.py  run_docx_editor_manual_test.py  run_phase2_asserts.py  run_step1_scoring_asserts.py  run_step3_decision_asserts.py  smoke_enforce_budgets.py  smoke_job_extractor.py  smoke_resume_extractor.py  smoke_rewrite_bullets.py  smoke_tailor_plan.py
ai-service/tailorresume_ai_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ai-service/tests/: conftest.py  test_ats_bullet_rewrite.py  test_ats_canonicalize.py  test_ats_coverage.py  test_ats_diagnostic_suite.py  test_ats_evidence_linking.py  test_ats_frequency.py  test_ats_recency.py  test_ats_regression_rules.py  test_ats_scoring_retail_transferable.py  test_ats_skills_optimization.py  test_ats_summary_rewrite.py  test_ats_tailoring_plan.py  test_ats_title_alignment.py  test_ats_weighting.py  test_budget_global_enforced.py  test_budget_per_bullet_enforced.py  test_budget_proceed_only.py  test_docx_editor.py  test_docx_overflow.py  test_integrity_invariants_fail.py  test_job_signals.py  test_llm_scoring.py  test_multi_rewrite_and_skills.py  test_provider_factory.py  test_resume_signals.py  (+12 more)
(+150 files in other folders)
